# secretaria

./: README.md  main.py  pyproject.toml
bf/: frequencia.py  main.py  pyproject.toml
