[tool.poetry]
name = "Frequencia"
version = "0.1.0"
description = ""
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.60.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
